fixed glossary reference

--- a/IOT_n_national_accounts/IOT_n_national_sv.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national_sv.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "Data should be downloaded into a data/ folder in the same directory your module is, then it should be loaded and plotted in python\n",
     "\n",
-    "- Data source 1: eurostat, national accounts, main GDP aggregates https://ec.europa.eu/eurostat/data/database?node_code=lfsq\n",
+    "- Data source 1: eurostat, national accounts, main GDP aggregates https://ec.europa.eu/eurostat/databrowser/explore/all/economy?lang=en&display=list&sort=category\n",
     "\n",
     "- Data source 2: CBS https://www.cbs.nl/-/media/_excel/2022/27/83-inputoutput-tables-20152021.xlsx\n",
     "\n",
@@ -58,12 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# import modules\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -75,9 +74,8 @@
     "GDP_data = None\n",
     "\n",
     "# We are only interested in data in euros so make sure you slice the right currency\n",
-    "GDP_data = None\n",
     "\n",
-    "# print the columns, it will help you understand how you can proceed in selecting the data"
+    "# print the columns, it will help you understand how you can proceed in selecting the data\n"
    ]
   },
   {
@@ -90,7 +88,11 @@
     "\n",
     "You can investigate what each code means by checking the vocabulary on the European Environment Agency website \n",
     "\n",
-    "https://dd.eionet.europa.eu/vocabulary/eurostat/na_item/view"
+    "https://dd.eionet.europa.eu/vocabulary/eurostat/na_item/view\n",
+    "\n",
+    "or you can check the statistical terms glossary for full definitions\n",
+    "\n",
+    "https://data.un.org/Glossary.aspx"
    ]
   },
   {
@@ -145,17 +147,17 @@
    "source": [
     "# select national account codes to be isolated in the data \n",
     "\n",
-    "# Check wether all the items are available in the GDP breakdown csv\n"
+    "# Check wether all the items are available in the GDP breakdown csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "adcdf780",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# organize and plot your results for the income approach\n"
+    "# organize and plot your results for the income approach"
    ]
   },
   {
@@ -495,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "vscode": {
    "interpreter": {
