completed exercise + additional instructions

--- a/IOT_n_national_accounts/IOT_n_national_sv.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national_sv.ipynb
@@ -261,6 +261,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
@@ -273,7 +274,12 @@
     "\n",
     "https://www.cbs.nl/en-gb/custom/2022/27/national-accounts-2021-tables\n",
     "\n",
-    "Tip: once you download the data have a good look at how it is structure, how the labels are organized.\n"
+    "Tip: once you download the data have a good look at how it is structure, how the labels are organized.\n",
+    "\n",
+    "In order to better understand how GDP can be calculated in IOTs, use the EUROSTAT manual table 11.6 on page 305\n",
+    "\n",
+    "\n",
+    "![image](.\\figure\\IOT_basic_price.PNG)\n"
    ]
   },
   {
