--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -411,7 +411,7 @@
     "In order to better understand how GDP can be calculated in IOTs, use the EUROSTAT manual table 11.6 on page 305\n",
     "\n",
     "\n",
-    "![image](.\\figure\\IOT_basic_price.PNG)"
+    "![image](./figure/IOT_basic_price.PNG)"
    ]
   },
   {
