fixed typos and rerun cells

--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "89a776a4-3fd8-46c1-9940-53765b5dcbad",
    "metadata": {},
    "outputs": [
@@ -110,10 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "de4aa089-5c9d-4f22-92c8-90d1f73e45bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['B11' 'B111' 'B112' 'B1G' 'B1GQ' 'B2A3G' 'D1' 'D11' 'D12' 'D2' 'D21'\n",
+      " 'D21X31' 'D2X3' 'D3' 'D31' 'P3' 'P31_S13' 'P31_S14' 'P31_S14_S15'\n",
+      " 'P31_S15' 'P32_S13' 'P3_P5' 'P3_P6' 'P3_S13' 'P41' 'P51G' 'P52' 'P52_P53'\n",
+      " 'P53' 'P5G' 'P6' 'P61' 'P62' 'P7' 'P71' 'P72' 'YA0' 'YA1' 'YA2']\n"
+     ]
+    }
+   ],
    "source": [
     "print(GDP_data.na_item.unique())"
    ]
@@ -249,12 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "00a59880",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# organize and plot your results for the expenditure approach\n",
     "\n",
     "GDP_breakdown = GDP_data[GDP_data.na_item.isin(breakdown_expen)]\n",
@@ -299,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2d8c9bae",
    "metadata": {},
    "outputs": [],
@@ -310,17 +320,16 @@
     "# Check wether all the items are available in the GDP breakdown csv\n",
     "for bi in breakdown_prod:\n",
     "    if bi not in GDP_data.na_item.unique():\n",
-    "        print(bi)\n"
+    "        print(bi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "20d14d57",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# organize and plot your results for the production approach\n",
     "\n",
     "GDP_breakdown = GDP_data[GDP_data.na_item.isin(breakdown_prod)]\n",
@@ -356,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bce4aa27",
    "metadata": {},
    "outputs": [
@@ -389,7 +398,7 @@
     "check_comparison = pd.concat([income_approach, expenditure_approach, production_approach], axis=1)\n",
     "check_comparison.columns = NA_GDP_approaches_results.keys()\n",
     "\n",
-    "print(check_comparison)\n"
+    "print(check_comparison)"
    ]
   },
   {
@@ -416,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "f4158925-2d16-4901-a5f1-08c422e976aa",
    "metadata": {},
    "outputs": [
@@ -459,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "9a38df65",
    "metadata": {},
    "outputs": [],
@@ -504,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8a282134",
    "metadata": {},
    "outputs": [
@@ -533,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "1f5fc6ef",
    "metadata": {},
    "outputs": [],
@@ -543,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "f30c17da-c367-4094-9b51-86ad2756dee9",
    "metadata": {},
    "outputs": [
@@ -553,7 +562,7 @@
        "762564.0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "id": "96dae8ff",
    "metadata": {},
    "outputs": [
@@ -596,13 +605,13 @@
        "856356.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# From GDP at basic price to actual GDP\n",
+    "# From value added at basic price to actual GDP\n",
     "taxes_less_subsidies_items = [\"Import duties\", \"Other taxes on imports\", \"Taxes on domestic products\", \"Import subsidies (–)\",\"Subsidies on domestic products (–)\"]\n",
     "\n",
     "taxes_less_subsidies = IO_2021_cp.loc[taxes_less_subsidies_items, \"Total (1–81)\":\"Trade and transport margins\"]\n",
@@ -613,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "7a386c66-b7a8-4be5-8c33-713c682ebb99",
    "metadata": {},
    "outputs": [
@@ -623,7 +632,7 @@
        "856356.0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
