publishing solutions and improved clarity of exercise

--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -92,7 +92,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e0d6d14b-0df0-43a8-85ed-3757dafa5cc7",
    "metadata": {},
@@ -402,7 +401,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
@@ -452,7 +450,8 @@
    ],
    "source": [
     "# Load the IO data\n",
-    "CBS_IO = pd.ExcelFile(f\"data/CBS/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
+    "data = \"data/\"\n",
+    "CBS_IO = pd.ExcelFile(f\"{data}CBS/83 InputOutput tables 20152021.xlsx\", engine=\"openpyxl\")\n",
     "\n",
     "# Print the list of sheets that are available in the xlsx file so that you can investigate what options you have\n",
     "print(*CBS_IO.sheet_names, sep=\"\\n\")"
@@ -582,7 +581,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "324fa8c8",
    "metadata": {},
@@ -755,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
