--- a/supply_n_use_tables/supply_n_use_tables_sv.ipynb
+++ b/supply_n_use_tables/supply_n_use_tables_sv.ipynb
@@ -21,11 +21,9 @@
    "source": [
     "# import modules\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "# Import data\n",
-    "supply_ = pd.read_excel(\"data/modified_supply_basic_price_AT_OECD_2015.xlsx\", engine=\"openpyxl\", skipfooter=3)\n",
-    "use_ = pd.read_excel(\"data/modified_use_basic_price_AT_OECD_2015.xlsx\", engine=\"openpyxl\", skipfooter=6)"
+    "supply_ = pd.read_excel(\"data/modified_supply_basic_price_AT_OECD_2015.xlsx\", engine=\"openpyxl\", skipfooter=3)"
    ]
   },
   {
@@ -114,11 +112,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. What is the basic prices and purchaser price?\n",
+    "3. What is the total product output at basic price and at purchaser price?\n",
     "\n",
     "    N.b. in the Supply and Use table Non-Deductible VAT is included in the Taxes less subsidies on products (see also page 86 Eurostat Manual of Supply, Use and Input-Output Tables)\n",
     "\n",
-    "    tip: do not try to include NaN values in your calculations  "
+    "Tip: in the file \"modified_supply_basic_price_AT_OECD_2015.xlsx\" you can check whether the calculations are right in the columns \"Total supply at purchasers' prices\" and \"Total supply at basic prices\"\n",
+    "\n",
+    "Tip: you can use p_1_supply.loc[] to select the right rows"
    ]
   },
   {
@@ -127,19 +127,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Basic and purchaser prices for product 1\n",
-    "basic_price_p_1 = None\n",
-    "purchaser_price_p_1 = None\n",
+    "# Total supply at basic and purchaser prices for product 1\n",
+    "p_1_basic_price = None\n",
     "\n",
-    "# Basic and purchaser prices for product 2\n",
-    "basic_price_p_2 = None\n",
-    "purchaser_price_p_2 = None\n",
+    "p_1_taxes_less_subsidies = None\n",
+    "p_1_trade_n_transport_margins = None\n",
+    "\n",
+    "p_1_purchaser_price = None\n",
+    "\n",
+    "# Total supply at basic and purchaser prices for product 2\n",
+    "p_2_basic_price = None\n",
+    "\n",
+    "p_2_taxes_less_subsidies = None\n",
+    "p_2_trade_n_transport_margins = None\n",
+    "\n",
+    "p_2_purchaser_price = None\n",
     "\n",
     "# basic and purchase prices for product 1\n",
-    "print(f\"{products[0]}: \\n\\tBasic price: {basic_price_p_1}\\n\\tPurchaser price: {purchaser_price_p_1}\")\n",
+    "print(f\"{products[0]}: \\n\\tBasic price: {p_1_basic_price}\\n\\tPurchaser price: {p_1_purchaser_price}\")\n",
     "\n",
     "# basic and purchase prices for product 2\n",
-    "print(f\"{products[1]}: \\n\\tBasic price: {basic_price_p_2}\\n\\tPurchaser price: {purchaser_price_p_2}\")\n"
+    "print(f\"{products[1]}: \\n\\tBasic price: {p_2_basic_price}\\n\\tPurchaser price: {p_2_purchaser_price}\")\n"
    ]
   },
   {
@@ -166,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select two products\n",
+    "# Select two industries\n",
     "industries = []"
    ]
   },
