--- a/supply_n_use_tables/supply_n_use_tables_sv.ipynb
+++ b/supply_n_use_tables/supply_n_use_tables_sv.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,19 +36,12 @@
     "supply_col_lb = supply_.iloc[9,7:].to_list()\n",
     "supply_row_lb = supply_.iloc[11:, 2].to_list()\n",
     "\n",
-    "use_col_lb = use_.iloc[9,4:].to_list()\n",
-    "use_row_lb = use_.iloc[11:, 0].to_list()\n",
-    "\n",
     "# isolate array with only values\n",
     "supply = supply_.iloc[11:,7:]\n",
-    "use = use_.iloc[11:,4:]\n",
     "\n",
     "# assign clean labels to columns and row\n",
     "supply.columns = supply_col_lb\n",
-    "supply.index = supply_row_lb\n",
-    "\n",
-    "use.columns = use_col_lb\n",
-    "use.index = use_row_lb"
+    "supply.index = supply_row_lb"
    ]
   },
   {
