corrected directory and links

--- a/IOT_n_national_accounts/IOT_n_national_sv.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national_sv.ipynb
@@ -260,6 +260,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
@@ -277,7 +278,7 @@
     "In order to better understand how GDP can be calculated in IOTs, use the EUROSTAT manual table 11.6 on page 305\n",
     "\n",
     "\n",
-    "![image](.\\figure\\IOT_basic_price.PNG)\n"
+    "![image](./figures/IOT_basic_price.PNG)\n"
    ]
   },
   {
