--- a/IOT_n_national_accounts/IOT_n_national.ipynb
+++ b/IOT_n_national_accounts/IOT_n_national.ipynb
@@ -401,6 +401,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f0fdec0-964b-442a-9689-32403f186e87",
    "metadata": {},
@@ -418,7 +419,7 @@
     "In order to better understand how GDP can be calculated in IOTs, use the EUROSTAT manual table 11.6 on page 305\n",
     "\n",
     "\n",
-    "![image](./figure/IOT_basic_price.PNG)"
+    "![image](./figures/IOT_basic_price.PNG)"
    ]
   },
   {
@@ -739,7 +740,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -753,11 +754,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a0de1fb450ee5e26d734f0aa5b4c4b29e20575809e5e66472467df7627fd957d"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
