--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Supply chain linkages\n",
+    "# Practical 3: Supply chain linkages\n",
     "\n",
     "### Objectives\n",
     "- Understand the format of input-output tables\n",
