Corrected typose and missing cell for G verification

--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -331,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check that the total product input is equal to the one we have already calculated x=Gv\n",
+    "# Check that the total product input is equal to the one we have already calculated x=vG\n",
     "x_g = None\n",
     "x_g"
    ]
@@ -390,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sum the sectors in A to obtain the direct forward linkages\n",
+    "# Sum the sectors in A to obtain the direct backward linkages\n",
     "s_a_sum = None"
    ]
   },
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sum the sectors in L to obtain the total forward linkages\n",
+    "# Sum the sectors in L to obtain the total backward linkages\n",
     "s_l_sum = None"
    ]
   },
