--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +45,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Agriculture</th>\n",
+       "      <th>Manufacturing</th>\n",
+       "      <th>Services</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Agriculture</th>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manufacturing</th>\n",
+       "      <td>0.8</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>7.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Services</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Agriculture  Manufacturing  Services\n",
+       "Agriculture            0.6            2.6       0.5\n",
+       "Manufacturing          0.8           30.6       7.8\n",
+       "Services               0.9           12.1      23.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "labels = pd.Index([\"Agriculture\", \"Manufacturing\", \"Services\"])\n",
     "\n",
@@ -61,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.3, 22.4, 52.5])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Value added (last row of the first table)\n",
     "v = np.array([3.30, 22.4, 52.5])\n",
@@ -98,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.9, 28.5, 47.8])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y = np.array([1.9, 28.5, 47.8])\n",
     "y"
@@ -128,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +256,7 @@
    "source": [
     "1. Create a technical coefficient matrix and its identity matrix\n",
     "    \n",
-    "   $A = Z \\hat{x}^{-1}$\n",
+    "   $\\mathbf{A} = \\mathbf{Z} \\hat{x}^{-1}$\n",
     "\n",
     "    tip: \n",
     "    - use the @ operand or np.matmult() method for multiplications\n",
@@ -184,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +285,8 @@
    "source": [
     "2. Calculate and verify the Leontief inverse\n",
     "\n",
+    "    $\\mathbf{L} = (\\mathbf{I}-\\mathbf{A})^{-1}$\n",
+    "\n",
     "    Steps: \n",
     "\n",
     "    - Calculate Leontief inverse using numpy.linalg.inv method\n",
@@ -211,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +324,8 @@
    "source": [
     "3. Calculate the Leontief price model\n",
     "\n",
+    "    $\\mathbf{L} = (\\mathbf{I}-\\mathbf{A}')^{-1}$\n",
+    "\n",
     "    Steps: \n",
     "\n",
     "    - Transpose A\n",
@@ -252,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,12 +351,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the value added coefficients by dividing the value added by total product output\n",
-    "v_coef = None\n",
+    "# calculate the value added coefficients by dividing the value added by total product output v= V/x\n",
+    "v = None\n",
     "\n",
     "# Check that p=1\n",
     "p = None\n",
@@ -291,12 +378,12 @@
    "source": [
     "1. Create a technical coefficient matrix B and its identity matrix\n",
     "\n",
-    "    $B = \\hat{x}^{-1} Z$"
+    "    $\\mathbf{B} = \\hat{x}^{-1} \\mathbf{Z}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,12 +399,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Calculate and verify Ghosh inverse"
+    "2. Calculate and verify Ghosh inverse\n",
+    "\n",
+    "    $\\mathbf{G} = (\\mathbf{I}-\\mathbf{B})^{-1}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,9 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Normalize direct backward linkages results \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m no_sectors \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39;49m(s_a_sum)\n\u001b[1;32m      3\u001b[0m avg_a \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m      4\u001b[0m norm_dir_back_link \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+     ]
+    }
+   ],
    "source": [
     "# Normalize direct backward linkages results \n",
     "no_sectors = len(s_a_sum)\n",
