--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -173,7 +173,7 @@
    "source": [
     "1. Create a technical coefficient matrix and its identity matrix\n",
     "    \n",
-    "   $\\mathbf{A} = \\mathbf{Z} \\hat{x}^{-1}$\n",
+    "   $\\mathbf{A} = \\mathbf{Z} \\hat{\\mathbf{x}}^{-1} $\n",
     "\n",
     "    tip: \n",
     "    - use the @ operand or np.matmult() method for multiplications\n",
@@ -295,7 +295,7 @@
    "source": [
     "1. Create a technical coefficient matrix B and its identity matrix\n",
     "\n",
-    "    $\\mathbf{B} = \\hat{x}^{-1} \\mathbf{Z}$"
+    "    $\\mathbf{B} = \\hat{\\mathbf{x}}^{-1} \\mathbf{Z}$"
    ]
   },
   {
