--- a/supply_chain_linkages/supply_chain_linkages.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "Services               0.9           12.1      23.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -145,15 +145,15 @@
        "array([ 3.3, 22.4, 52.5])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Value added (last row of the first table)\n",
-    "v = np.array([3.30, 22.4, 52.5])\n",
-    "v"
+    "V = np.array([3.30, 22.4, 52.5])\n",
+    "V"
    ]
   },
   {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -174,14 +174,14 @@
        "array([ 1.9, 28.5, 47.8])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = np.array([1.9, 28.5, 47.8])\n",
-    "y"
+    "Y = np.array([1.9, 28.5, 47.8])\n",
+    "Y"
    ]
   },
   {
@@ -192,19 +192,20 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "4. calculate total outputs: intermediate output + final product output\n",
     "\n",
-    "    $x_i = \\sum_{i=0}^n Z_i + y_i$\n",
+    "    $x_i = \\sum_{i=0}^n Z_i + Y_i$\n",
     "\n",
     "    tip: use the .sum() method and remember that axis=0 is columns and axis=1 is rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -213,29 +214,30 @@
        "array([ 5.6, 67.7, 83.8])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Z_sum = Z.sum(axis=1) \n",
-    "x_out = Z_sum + y\n",
+    "x_out = Z_sum + Y\n",
     "x_out"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "5. calculate the total inputs: intermediate input + value added\n",
     "\n",
-    "    $x_j = \\sum_{j=0}^n Z_j + v_j$"
+    "    $x_j = \\sum_{j=0}^n Z_j + V_j$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -244,14 +246,14 @@
        "array([ 5.6, 67.7, 83.8])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Z_sum = Z.sum(axis=0)\n",
-    "x_in = Z_sum + v\n",
+    "x_in = Z_sum + V\n",
     "x_in"
    ]
   },
@@ -263,6 +265,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -271,7 +274,7 @@
     "    $\\mathbf{A} = \\mathbf{Z} \\hat{\\mathbf{x}}^{-1} $\n",
     "\n",
     "    tip: \n",
-    "    - use the @ operand or np.matmult() method for multiplications\n",
+    "    - use the @ operand or np.matmul() method for multiplications\n",
     "    - use the numpy diag() method to diagonalize a vector\n",
     "    - use numpy linalg.inv() method to perform inverses\n",
     "    - use numpy identity() method for the identity matrix, tip: use the number of columns between the brackets"
@@ -279,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +321,7 @@
        "       [0.33920879, 0.49491248, 1.44457108]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -341,18 +344,19 @@
        "array([ 5.6, 67.7, 83.8])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check that the total product output is equal to the one we have already calculated\n",
-    "x = L @ y\n",
+    "x = L @ Y\n",
     "x"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -366,14 +370,14 @@
     "\n",
     "    - Calculate Leontief inverse using numpy.linalg.inv method\n",
     "\n",
-    "    - Calculate value added coeffients by dividing v by x\n",
+    "    - Calculate value added coefficients by dividing V by x\n",
     "        \n",
     "    - multiply the Leontief inverse by the value added coefficients"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -394,17 +398,17 @@
        "array([1., 1., 1.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# calculate the value added coefficients by dividing the value added by total product output\n",
-    "v_coef = v/x\n",
+    "v = V/x\n",
     "\n",
     "# Check that p=1\n",
-    "p = L_p @ v_coef\n",
+    "p = L_p @ v\n",
     "p"
    ]
   },
@@ -426,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -467,14 +471,14 @@
        "array([ 5.6, 67.7, 83.8])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check that the total product input is equal to the one we have already calculated x=G'v\n",
-    "x_g = G.T @ v\n",
+    "# Check that the total product input is equal to the one we have already calculated x=G'V\n",
+    "x_g = G.T @ V\n",
     "x_g"
    ]
   },
@@ -502,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +638,7 @@
        "Services               0.770994         0.849463"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +697,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +722,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +826,7 @@
        "Services              0.772034        0.845380"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +914,7 @@
        "Services             0.845380  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
