--- a/supply_chain_linkages/supply_chain_linkages_sv.ipynb
+++ b/supply_chain_linkages/supply_chain_linkages_sv.ipynb
@@ -80,8 +80,8 @@
    "outputs": [],
    "source": [
     "# Value added (last row of the first table)\n",
-    "v = np.array([3.30, 22.4, 52.5])\n",
-    "v"
+    "V = np.array([3.30, 22.4, 52.5])\n",
+    "V"
    ]
   },
   {
@@ -97,8 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = np.array([1.9, 28.5, 47.8])\n",
-    "y"
+    "Y = np.array([1.9, 28.5, 47.8])\n",
+    "Y"
    ]
   },
   {
@@ -109,12 +109,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "4. calculate total outputs: intermediate output + final product output\n",
     "\n",
-    "    $x_i = \\sum_{i=0}^n Z_i + y_i$\n",
+    "    $x_i = \\sum_{i=0}^n Z_i + Y_i$\n",
     "\n",
     "    tip: use the .sum() method and remember that axis=0 is columns and axis=1 is rows"
    ]
@@ -131,12 +132,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "5. calculate the total inputs: intermediate input + value added\n",
     "\n",
-    "    $x_j = \\sum_{j=0}^n Z_j + v_j$"
+    "    $x_j = \\sum_{j=0}^n Z_j + V_j$"
    ]
   },
   {
@@ -166,7 +168,7 @@
     "   $\\mathbf{A} = \\mathbf{Z} \\hat{\\mathbf{x}}^{-1} $\n",
     "\n",
     "    tip: \n",
-    "    - use the @ operand or np.matmult() method for multiplications\n",
+    "    - use the @ operand or np.matmul() method for multiplications\n",
     "    - use the numpy diag() method to diagonalize a vector\n",
     "    - use numpy linalg.inv() method to perform inverses\n",
     "    - use numpy identity() method for the identity matrix, tip: use the number of columns between the brackets"
@@ -218,12 +220,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check that the total product output is equal to the one we have already calculated x= Ly\n",
+    "# Check that the total product output is equal to the one we have already calculated x= LY\n",
     "x = None\n",
     "x"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,7 +240,7 @@
     "\n",
     "    - Calculate Leontief inverse using numpy.linalg.inv method\n",
     "\n",
-    "    - Calculate value added coeffients by dividing v by x\n",
+    "    - Calculate value added coefficients by dividing V by x\n",
     "        \n",
     "    - multiply the Leontief inverse by the value added coefficients"
    ]
@@ -322,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check that the total product input is equal to the one we have already calculated x=G'v\n",
+    "# Check that the total product input is equal to the one we have already calculated x=G'V\n",
     "x_g = None\n",
     "x_g"
    ]
