practical week 4 - learning objective correction

--- a/national_enviro_footprint/nat_enviro_footprint_sv.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint_sv.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -16,8 +17,7 @@
     "- To understand the structure of the MR IO system\n",
     "- Calculate national footprints\n",
     "- Gain transferable skills:\n",
-    "    - Master slicing\n",
-    "    - Visualize your data\n"
+    "    - Master slicing"
    ]
   },
   {
